; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/siano/extr_smscoreapi.c_smscore_registry_setmode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/siano/extr_smscoreapi.c_smscore_registry_setmode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smscore_registry_entry_t = type { i32 }

@.str = private unnamed_addr constant [19 x i8] c"No registry found.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @smscore_registry_setmode(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.smscore_registry_entry_t*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = call %struct.smscore_registry_entry_t* @smscore_find_registry(i8* %6)
  store %struct.smscore_registry_entry_t* %7, %struct.smscore_registry_entry_t** %5, align 8
  %8 = load %struct.smscore_registry_entry_t*, %struct.smscore_registry_entry_t** %5, align 8
  %9 = icmp ne %struct.smscore_registry_entry_t* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.smscore_registry_entry_t*, %struct.smscore_registry_entry_t** %5, align 8
  %13 = getelementptr inbounds %struct.smscore_registry_entry_t, %struct.smscore_registry_entry_t* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  br label %16

14:                                               ; preds = %2
  %15 = call i32 @sms_err(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %14, %10
  ret void
}

declare dso_local %struct.smscore_registry_entry_t* @smscore_find_registry(i8*) #1

declare dso_local i32 @sms_err(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
